se agrego ciruelas a la lista y se imprimio lista

--- a/tarea.ipynb
+++ b/tarea.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['manzanas', 'peras', 'naranjas']\n"
+      "['manzanas', 'peras', 'naranjas']\n",
+      "['manzanas', 'peras', 'naranjas', 'ciruelas']\n"
      ]
     }
    ],
    "source": [
     "frutas =[\"manzanas\",\"peras\",\"naranjas\"]\n",
+    "print (frutas)\n",
+    "frutas.append(\"ciruelas\")\n",
     "print (frutas)"
    ]
   },
@@ -27,6 +30,13 @@
     "* manzanas\n",
     "* peras\n",
     "* naranjas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### agrego ciruelas"
    ]
   }
  ],
